# pipeline_digital_library

./: .gitignore  README.md  __init__.py  config.py  core.py  main.py  pyproject.toml  readme.md  requirements.txt  test.py  vis2.py  visualize.py
model_weights/: best_model.pt  gat_model_version_01_0.92_f1.pt
models/: gat.py  ocr.py  table.py  transformer.py  yolo.py
pipeline_digital_library/: config.py  core.py
pipeline_digital_library/models/: gat.py  ocr.py  table.py  transformer.py  yolo.py
pipeline_digital_library/pipelines/: document_pipeline.py
pipeline_digital_library/stages/: feature_engineering.py  graph.py  table_extraction.py  text_detection.py  yolo_detection.py
pipeline_digital_library/utils/: cache.py  features.py  iou.py
pipelines/: document_pipeline.py  test_pipeline.py
scripts/: claude_test.py  claude_vis.py  document_gat.py  download_model.py  gat_model.py  main.py  vis2.py  visualize_all.py  visualize_json.py
stages/: detection.py  feature_engineering.py  graph.py  preprocess_pdf.py  table_extraction.py  text_detection.py  yolo_detection.py
utils/: cache.py  iou.py
